--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=home.html" />
+</head>
+<body>
+    Redirecting to <a href="HPC.html">HPC.html</a>...
+</body>
+</html>
