--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=home.html" />
 </head>
 <body>
-    Redirecting to <a href="HPC.html">HPC.html</a>...
+    Redirecting to <a href="home.html">home.html</a>...
 </body>
 </html>
