--- a/index.html
+++ b/index.html
@@ -72,14 +72,26 @@
          #downpdf:hover{color:#444;}
 
          #fulldata p a {color:#0eefff; text-decoration: none;}
+
+         @media screen and (max-width: 1550px) {
+            #fullgroup {
+                grid-template-columns: auto;
+            }
+
+            .leftgroup, .rightgroup {
+                overflow-x: auto;
+            }
+         }
             </style>
+             </script>
+            </head>
 
             
 
         
     <body class="vsc-initialized" data-new-gr-c-s-check-loaded="14.1231.0" data-gr-ext-installed="">
         <div id="header">
-            <p> SIGPROC Header Field Creation Functions</p>
+            <p id="title">SIGPROC Header Fields Functions</p>
         </div>
         <br>
         <div id="fulldata">
